volexc/tests/ui/check_duplicate_enum.out
Error: duplicate definition of `Status`
   ╭─[check_duplicate_enum.vol:2:6]
   │
 2 │ enum Status {
   │      ───┬──  
   │         ╰──── first defined here
   │ 
 6 │ enum Status {
   │      ───┬──  
   │         ╰──── redefined here
───╯