volexc/tests/ui/check_duplicate_enum.vol
// Duplicate enum definition
enum Status {
    Ok = 1;
}

enum Status {
    Error = 2;
}
